Fix responsive design
Changed the background color of the body at 800px media, so there isn't a
big white space below the content when resizing.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -141,6 +141,7 @@ input:hover, input:focus {
     body {
         display: flex;
         flex-flow: column;
+        background-color: goldenrod;
     }
     .right-container {
         padding: 2rem 0 0 0;
